# mlrs

./: .gitignore  Cargo.toml  README.md  main.ipynb
.github/workflows/: rust.yml
benches/: assign_type_bench.rs  csv_benches.rs  load_csv_bench.rs  preprocessing_benches.rs
examples/: simple_linear.rs
src/: constants.rs  lib.rs  prelude.rs
src/dataset/: error.rs  mod.rs
src/dataset/preprocesser/: error.rs  mod.rs  utils.rs
src/dataset/preprocesser/encoder/: label.rs  mod.rs  one_hot.rs
src/dataset/preprocesser/handler/: dropper.rs  imputer.rs  mod.rs
src/dataset/preprocesser/scaler/: min_max.rs  mod.rs  standard.rs
src/dataset/preprocessing/: mod.rs
src/dataset/preprocessing/encoding/: label.rs  mod.rs  one_hot.rs
src/dataset/preprocessing/handling/: imputer.rs
src/dataset/preprocessing/scaling/: min_max.rs  mod.rs  standard.rs  standard_scaler.rs
src/dataset/preprocessor/: error.rs  mod.rs  utils.rs
src/dataset/preprocessor/encoder/: label.rs  mod.rs  one_hot.rs
src/dataset/preprocessor/handler/: dropper.rs  imputer.rs
src/dataset/preprocessor/scaler/: min_max.rs  mod.rs  standard.rs
src/dataset/raw_dataset/: mod.rs
src/model/: error.rs  layer.rs  mod.rs  sequential.rs
src/model/activator/: identity.rs  mod.rs  relu.rs  sigmoid.rs  softmax.rs  tanh.rs
src/model/callback/: checkpoint.rs  early_stopping.rs  lr_reduce.rs  mod.rs
src/model/classifier/: mod.rs
src/model/linear/: mod.rs
src/model/metric/: accuracy.rs  logloss.rs  mod.rs  mse.rs  r2.rs
src/model/optimizer/: adam.rs  gradient_descent.rs  mod.rs  momentum.rs  rmsprop.rs
src/models/supervised/: linear_regression.rs
src/score/: mod.rs
src/testing/: mod.rs
src/training/: mod.rs
tests/: preprocessing_tests.rs
tests/fixtures/: escaped_quotes.csv  inconsistent.csv  nulls.csv  quoted.csv  sample.csv  utf8.csv
