[package]
name = "mlrs"
version = "0.1.1"
edition = "2024"
license = "Apache-2.0"
authors = ["KartikAg13"]
repository = "https://github.com/KartikAg13/mlrs"
description = "High-performance machine learning library in Rust"
keywords = ["machine-learning", "ml"]
categories = ["algorithms"]

[dependencies]
colored = "3.1.1"
log = "0.4.29"
ndarray = "0.17.2"
num_cpus = "1.17.0"
polars = "0.53.0"
rayon = "1.11.0"
thiserror = "2.0.18"

[dev-dependencies]
criterion = "0.8.2"
tempfile = "3.26.0"

[profile.dev]
opt-level = 0
debug = true
incremental = true
codegen-units = 256

[profile.test]
opt-level = 0
debug = true
incremental = true
codegen-units = 256

[[bench]]
name = "load_csv_bench"
harness = false
