[package]
name = "mlrs"
version = "0.2.6"
edition = "2024"
license = "Apache-2.0"
authors = ["KartikAg13"]
repository = "https://github.com/KartikAg13/mlrs"
description = "High-performance machine learning library in Rust"
keywords = ["machine-learning", "ml"]
categories = ["algorithms"]

[dependencies]
colored = ">=3.1"
ndarray = ">=0.17"
plotly = ">=0.14.1"
polars = ">=0.54"
rand = ">=0.10"
rand_distr = ">=0.6"
rayon = ">=1.11"
serde = ">=1.0.228"
serde_json = ">=1.0.150"
thiserror = ">=2.0"
thiserror-context = ">=0.1.2"

[dev-dependencies]
criterion = ">=0.8"
num_cpus = ">=1.17"
tempfile = ">=3.26"

[profile.dev]
opt-level = 1
debug = true
incremental = true
codegen-units = 256

[profile.test]
opt-level = 0
debug = true
incremental = true
codegen-units = 256

[profile.bench]
debug = true
opt-level = 3
lto = true
codegen-units = 1

[[bench]]
name = "preprocessing_benches"
harness = false

[[bench]]
name = "csv_benches"
harness = false
